Fix download button content alignment in RTL.

Bug: 767224
Change-Id: I33c9342330c9a41d041258ff57d024e7c1680519
Reviewed-on: https://chromium-review.googlesource.com/720117
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509057}
Former-commit-id: 8d70100c8cdebeab7a960e4ea939ab28878624d2